--- a/rsa_cryptography/Cargo.toml
+++ b/rsa_cryptography/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rsa = "0.5.0"
-rand = "0.9.6"
+rsa = "0.9"
+rand = "0.8.5"
+base64 = "0.22"
