--- a/digital_signature/Cargo.toml
+++ b/digital_signature/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rsa = "0.9.0"
-rand = "0.8.5"
-sha2 = "0.10.5"
+rsa = "0.9.6"          # Version for rsa crate
+sha2 = "0.10"        # Version for SHA-2 hashing algorithms
+rand = "0.8"         # Version for random number generation
 
