--- a/8_halo2_recursive_snark/Cargo.toml
+++ b/8_halo2_recursive_snark/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+halo2_proofs = { version = "0.3.0", features = ["pasta"] }
+halo2curves = { version = "0.7.0" }
+rand = "0.8.5"
+group = "0.13"
+
